--- a/php/5.6/apache/Dockerfile
+++ b/php/5.6/apache/Dockerfile
@@ -7,6 +7,7 @@ RUN apt-get update \
     && apt-get install mysql-client -qy \
     && apt-get install sqlite3 libsqlite3-dev -qy \
     && apt-get install libfreetype6-dev libjpeg62-turbo-dev libpng12-dev libxpm-dev libvpx-dev -qy \
+    && apt-get install ghostscript
     && docker-php-ext-configure gd \
                 --with-freetype-dir=/usr/lib/x86_64-linux-gnu/ \
 		--with-jpeg-dir=/usr/lib/x86_64-linux-gnu/ \
