docker image updates

--- a/php/5.6/apache/Dockerfile
+++ b/php/5.6/apache/Dockerfile
@@ -6,7 +6,7 @@ RUN apt-get update \
     && apt-get install libicu-dev -qy \
     && apt-get install mysql-client -qy \
     && apt-get install sqlite3 libsqlite3-dev -qy \
-    && apt-get install libfreetype6-dev libjpeg62-turbo-dev libpng12-dev libxpm-dev libvpx-dev -qy \
+    && apt-get install libfreetype6-dev libjpeg62-turbo-dev libpng-dev libxpm-dev libvpx-dev -qy \
     && apt-get install ghostscript -qy \
     && docker-php-ext-configure gd \
                 --with-freetype-dir=/usr/lib/x86_64-linux-gnu/ \
@@ -17,11 +17,13 @@ RUN apt-get update \
     && pear channel-discover pear.phing.info \
     && pear install phing/phing \
     && a2enmod rewrite \
+    && apt-get install -y git \
+    && apt-get install -y subversion \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
 # PHP config
-COPY ./conf/*.ini $PHP_INI_DIR/conf.d/
+COPY conf/*.ini /usr/local/etc/php/conf.d/
 
 # Set up web root
 RUN rm -rf /var/www/html \
